# attendance_sync

./: main.py  main.py.all-trans  main.py.all-trans2  main.py.all-trans3  main.py.all-trans4_working  main.py.all-trans4_working2  main.py.old  main.py.old2  pyproject.toml
